Add semantic scoring and node resilience